test/errors/null_member_access.li
let x = null;
x.property;
